crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__typename__only_typename-partial-solution.snap
---
source: crates/engine/query-solver/src/tests/typename.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.topProducts\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#products" ]
    2 [ label = "Query.topProducts" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
}
