crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__typename__top_level_typename-finalized-solution.snap
---
source: crates/engine/query-solver/src/tests/typename.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"__typename\" ]\n    2 [ label = \"Introspection\", color=royalblue,shape=parallelogram ]\n    0 -> 2 [ color=royalblue,fontcolor=royalblue ]\n    2 -> 1 [  ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "__typename" ]
    2 [ label = "Introspection" ]
    0 -> 2 [ label = "QueryPartition" ]
    2 -> 1 [ label = "Field" ]
}
