crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__typename__top_level_typename-solved.snap
---
source: crates/engine/query-solver/src/tests/typename.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"__typename\", color=forestgreen ]\n    2 [ label=\"\", style=dashed]\n    0 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    2 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "__typename", steiner=1 ]
    2 [ label="", style=dashed]
    0 -> 1 [ cost=0, steiner=1]
    2 -> 0 [ cost=0, steiner=0]
}
